--- a/Spirit/style.css
+++ b/Spirit/style.css
@@ -1,3 +1,12 @@
 button {
     margin: 100px;
 }
+
+
+canvas {
+    position: absolute;
+    top: 0px;
+    height: 0px;
+    width: 100vw;
+    height: 100vh;
+}
