--- a/Spirit/style.css
+++ b/Spirit/style.css
@@ -1,10 +1,15 @@
+body {
+    margin: 0px;
+    padding: 0px;
+}
+
 button {
     margin: 100px;
 }
 
 
 canvas {
-    position: absolute;
+    position: fixed;
     top: 0px;
     height: 0px;
     width: 100vw;
